--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.10.5",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "openai": "^4.98.0",
     "react": "^19.0.0",
@@ -34,6 +36,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
